# grid_map

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  build_depends.rolling.repos  jenkins-pipeline
grid_map/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map/src/: GridMap.cpp  GridMapMsgHelpers.cpp  GridMapRosConverter.cpp  Polygon.cpp  PolygonRosConverter.cpp
grid_map/test/: GridMapTest.cpp  PolygonTest.cpp
grid_map_cmake_helpers/: CHANGELOG.rst  CMakeLists.txt  grid_map_cmake_helpers-extras.cmake  package.xml
grid_map_cmake_helpers/cmake/: grid_map_package.cmake
grid_map_common/: CMakeLists.txt  grid_map_common-extras.cmake  package.xml
grid_map_common/cmake/: grid_map_package.cmake
grid_map_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map_core/cmake/: grid_map_core-extras.cmake
grid_map_core/src/: BufferRegion.cpp  CubicInterpolation.cpp  GridMap.cpp  GridMapMath.cpp  IndexCheckerAnd.cpp  IndexCheckerHalfSpace.cpp  IndexCheckerNan.cpp  IndexCheckerNonZero.cpp  IndexCheckerZero.cpp  Polygon.cpp  SubmapGeometry.cpp
grid_map_core/test/: CubicConvolutionInterpolationTest.cpp  CubicInterpolationTest.cpp  EigenPluginsTest.cpp  EllipseIteratorTest.cpp  FillIteratorTest.cpp  GridMapIteratorTest.cpp  GridMapMathTest.cpp  GridMapTest.cpp  LineIteratorTest.cpp  NearestValidIteratorTest.cpp  PolygonIteratorTest.cpp  PolygonTest.cpp  SlidingWindowIteratorTest.cpp  SpiralGridIteratorTest.cpp  SpiralIteratorTest.cpp  SubmapIteratorTest.cpp  ThickenedLineIteratorTest.cpp  test_grid_map_core.cpp  test_helpers.cpp  test_helpers.hpp
grid_map_costmap_2d/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map_costmap_2d/rostest/: CMakeLists.txt  README.md
grid_map_costmap_2d/test/: CMakeLists.txt  Costmap2DConverterTest.cpp  costmap_2d_ros.cpp  costmap_2d_ros.hpp  test_costmap_2d_converter.cpp  test_costmap_2d_ros.cpp  test_costmap_2d_ros.hpp  test_grid_map_costmap_2d.cpp
grid_map_cv/: CHANGELOG.rst  CMakeLists.txt  filter_plugins.xml  package.xml
grid_map_cv/src/: GridMapCvProcessing.cpp  InpaintFilter.cpp
grid_map_cv/test/: GridMapCvProcessingTest.cpp  GridMapCvTest.cpp  test_grid_map_cv.cpp
grid_map_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map_demos/config/: filters_demo.yaml  filters_demo_filter_chain.yaml  grid_map_loader_demo.yaml  gridmap_registration_demo.yaml  image_to_gridmap_demo.yaml  image_to_gridmap_demo.yaml~  image_to_gridmap_visualization.yaml  image_to_gridmap_visualization.yaml~  interpolation_demo.yaml  iterators_demo.yaml  move_demo.yaml  normal_filter_comparison.yaml  normal_filter_comparison_visualization.yaml  octomap_to_gridmap_demo.yaml  opencv_demo.yaml  resolution_change_demo.yaml  sdf_demo.yaml  simple_demo.yaml  tutorial_demo.yaml
grid_map_demos/data/: freiburg1_360.bt  grid_map.bag
grid_map_demos/launch/: filters_demo.launch  filters_demo_launch.py  grid_map_loader_demo.launch  grid_map_loader_demo_launch.py  grid_map_registration_demo.launch  gridmap_registration_demo.launch  image_to_gridmap_demo.launch  image_to_gridmap_demo_launch.py  interpolation_demo.launch  interpolation_demo_launch.py  iterators_demo.launch  iterators_demo_launch.py  move_demo.launch  move_demo_launch.py  normal_filter_comparison.launch  normal_filter_comparison_launch.py  octomap_to_gridmap_demo.launch  octomap_to_gridmap_demo_launch.py  opencv_demo.launch  opencv_demo_launch.py  resolution_change_demo.launch  resolution_change_demo_launch.py  sdf_demo.launch  simple_demo.launch  simple_demo_launch.py  tutorial_demo.launch  tutorial_demo_launch.py
grid_map_demos/rviz/: filters_demo.rviz  grid_map_demo.rviz  grid_map_iterators_demo.rviz  interpolation_demo.rviz  normal_filter_comparison_demo.rviz  octomap_to_gridmap_demo.rviz  sdf_demo.rviz
grid_map_demos/scripts/: example_image_16bit.tif  ground_truth_pose_publisher.py  image_publisher.py
grid_map_demos/src/: FiltersDemo.cpp  GridMapExample.cpp  GridMapRegistrationDemo.cpp  GridmapRegistrationDemo.cpp  GridmapToImageDemo.cpp  ImageToGridmapDemo.cpp  InterpolationDemo.cpp  IteratorsDemo.cpp  OctomapToGridmapDemo.cpp  SdfDemo.cpp  filters_demo_node.cpp  grid_map_example_node.cpp  grid_map_iterator_benchmark.cpp  grid_map_registration_demo_node.cpp  grid_map_to_image_demo_node.cpp  gridmap_registration_demo_node.cpp  image_to_gridmap_demo_node.cpp  interpolation_demo_node.cpp  iterator_benchmark.cpp  iterators_demo_node.cpp  move_demo_node.cpp  normal_filter_comparison_node.cpp  octomap_to_gridmap_demo_node.cpp  opencv_demo_node.cpp  resolution_change_demo_node.cpp  sdf_demo_node.cpp  simple_demo_node.cpp  tutorial_demo_node.cpp
grid_map_filters/: CHANGELOG.rst  CMakeLists.txt  filter_plugins.xml  package.xml
grid_map_filters/src/: BinaryFilter.cpp  BufferNormalizerFilter.cpp  ColorBlendingFilter.cpp  ColorFillFilter.cpp  ColorMapFilter.cpp  CurvatureFilter.cpp  DeletionFilter.cpp  DuplicationFilter.cpp  InpaintFilter.cpp  LightIntensityFilter.cpp  MathExpressionFilter.cpp  MeanInRadiusFilter.cpp  MedianFillFilter.cpp  MinFilter.cpp  MinInRadiusFilter.cpp  MockFilter.cpp  NormalColorMapFilter.cpp  NormalVectorsFilter.cpp  SetBasicLayersFilter.cpp  SlidingWindowMathExpressionFilter.cpp  ThresholdFilter.cpp  WeightedSumFilter.cpp  ZeroOneFilter.cpp  plugins.cpp
grid_map_filters/test/: median_fill_filter_test.cpp  mock_filter_test.cpp  threshold_filter_test.cpp
grid_map_lib/: CMakeLists.txt  filter_plugins.xml  package.xml
grid_map_lib/src/: GridMap.cpp  GridMapIterator.cpp  GridMapMath.cpp  (+3 more)
grid_map_loader/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map_msg/: CMakeLists.txt  package.xml
grid_map_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map_octomap/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map_pcl/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
grid_map_python/: CMakeLists.txt  package.xml  py_core.cpp  py_module.cpp  setup.py
grid_map_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
grid_map_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  CMakeListsWorkgin.txt  package.xml  plugin_description.xml
(+334 files in other folders)
