<?xml version="1.0"?>
<package format="2">
  <name>grid_map</name>
  <version>1.6.8</version>
  <description>Meta-package for the universal grid map library.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_cv</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_filters</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>
  <exec_depend>grid_map_loader</exec_depend>
  <exec_depend>grid_map_demos</exec_depend>
  <export>
    <metapackage />
  </export>
</package>
