<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grid_map</name>
  <version>2.0.1</version>
  <description>Meta-package for the universal grid map library.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="ryanfriedman5410+grid_map@gmail.com">Ryan Friedman</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>grid_map_cmake_helpers</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_costmap_2d</exec_depend>
  <exec_depend>grid_map_cv</exec_depend>
  <exec_depend>grid_map_demos</exec_depend>
  <exec_depend>grid_map_filters</exec_depend>
  <exec_depend>grid_map_loader</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_octomap</exec_depend>
  <exec_depend>grid_map_pcl</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>
  <exec_depend>grid_map_sdf</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
