<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grid_map_cmake_helpers</name>
  <version>2.0.0</version>
  <description>CMake support functionality used throughout grid_map</description>
  <maintainer email="someone@gmail.com">who_is_the_maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
