<?xml version="1.0"?>
<package format="2">
  <name>grid_map_costmap_2d</name>
  <version>1.6.0</version>
  <description>Interface for grid maps to the costmap_2d format.</description>
  <maintainer email="pfankhauser@ethz.ch">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/ethz-asl/grid_map</url>
  <url type="bugtracker">http://github.com/ethz-asl/grid_map/issues</url>
  <author email="pfankhauser@ethz.ch">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>costmap_2d</depend>
  <depend>tf</depend>
</package>
