<?xml version="1.0"?>
<package format="2">
  <name>grid_map_cv</name>
  <version>1.6.1</version>
  <description>Conversions between grid maps and OpenCV images.</description>
  <maintainer email="pfankhauser@anybotics.com">Péter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_core</depend>
  <depend>cv_bridge</depend>
  <depend>filters</depend>
  <export>
    <filters plugin="${prefix}/filter_plugins.xml" />
  </export>
</package>
