<?xml version="1.0"?>
<package format="2">
  <name>grid_map_cv</name>
  <version>1.6.8</version>
  <description>Conversions between grid maps and OpenCV images.</description>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <license>BSD</license>
  <url type="website">http://github.com/anybotics/grid_map</url>
  <url type="bugtracker">http://github.com/anybotics/grid_map/issues</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <author email="mgaertner@anybotics.com">Magnus Gärtner</author>
  <buildtool_depend>catkin</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->
  <depend>grid_map_core</depend>
  <depend>cv_bridge</depend>
  <depend>filters</depend>
  <depend>libopencv-dev</depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
  <export>
    <filters plugin="${prefix}/filter_plugins.xml" />
  </export>
</package>
